19990615-21:00 CET Jose Lalin / Eddie Runia
  + source/rtl/natmsg/msgbas.c
  * source/rtl/msgxxx.c
  * source/compiler/harbour.y
    VarId ArrayIndex ':' and ObjectData ArrayIndex ':' syntax was incorrect

19990615-12:30 EDT David G. Holm <dholm@jsd-llc.com>
  * source/compiler/makefile.dos
    - Integrated preprocessor into compiler
  * source\hbpp\hbpp.c
    - Added braces to avoid implicit else in ParseExpression()
  * source/rtl/console.c
    - Added HARBOUR HB_SETPOS()
    - Improved printer position tracking
    - Improved screen position tracking when not using GT API
  * source/rtl/files.c
    - convert_create_flags no longer returns a value, so declare as void
  * source/rtl/set.c
    - Logical SET values can now use "ON" for .T. and "OFF" for .F.
  * source/rtl/strcmp.c
    - hb_stricmp does a case-insensitive compare even when not using a
      library function.
  * tests/working/output.prg
    - Converted to use the preprocessor

19990615-10:38 Alexander Kresin
 removed:
 - source\hbpp\harb.c
 added:
 + source\hbpp\hbppmain.c
 + source\hbpp\hbppint.c
 updated:
 * source\hbpp\hbpp.c
 * source\hbpp\table.c
 * source\hbpp\makefile
 * source\hbpp\makefile.b32
 * source\hbpp\makefile.b16
 * source\hbpp\buildgcc.bat
 * source\compiler\harbour.l
 * source\compiler\harbour.y
 * makefile.b32
 This is the latest preprocessor version, it may be build now as
 standalone or as integrated with compiler.

19990615-08:30 Ryszard Glab <rglab@imid.med.pl>

* source/compiler/harbour.y
  * added missing error message
  
* source/compiler/harbour.l
  * removed printf introducced for debugging purpose
  
19990615-07:00 Ryszard Glab <rglab@imid.med.pl>

* source/compiler/harbour.y
 * removed bug in CodeblockEnd (the names of local variables shoudn't
   be released here)

* source/compiler/harbour.l
 * corrected line continnuation logic

* include/hberrors.h
 + added new error message 

* include/hbsetup.h
 * removed unneccessary '*/' defined for Watcom compiler
